--- a/box-model.html
+++ b/box-model.html
@@ -11,18 +11,49 @@
             margin: 0;
         }
 
-        .Image {
+        .image {
             box-sizing: content-box;
             width: 300;
             padding: 30px;
             border: 3px dashed red;
             margin: 40px;
         }
+
+        .image1 {
+            float: left;
+        }
+
+        .image2 {
+            float: right;
+        }
+
+        h1 {
+            clear: both;
+        }
+
+        p {
+            clear: left;
+        }
+
+        body {
+            font-size: 30px;
+        }
     </style>
 </head>
 
 <body>
-    <img class="Image" src="Image/girl.webp" alt="柯萊塔"><img class="Image" src="Image/girl.webp" alt="柯萊塔">
+    <img class="image1" src="Image/girl.webp" alt="柯萊塔"><img class="image2" src="Image/girl.webp" alt="柯萊塔">
+    <h1>三星手機創戰場奇蹟！擋砲彈碎片，烏克蘭士兵逃死讚「像盔甲」...型號是這款，官方怎回應</h1>
+    <div>
+        <p>在烏克蘭戰場上，一名年輕士兵的生死關頭，竟因一支智慧型手機而改寫。</p>
+    </div>
+    <span style="background-color:bisque;">
+        <p>據外媒報導，烏克蘭一名士兵在一次砲擊中，隨身攜帶的Samsung Galaxy S25 Ultra成為他與死亡之間的最後屏障，成功擋下致命彈片，保住一命，引發國際媒體與網友討論。</p>
+    </span>
+    <p>根據烏克蘭媒體《Mezha》報導，一名網友在三星烏克蘭官方網站留言，<br>寫下自己約25至34歲、戰前曾於利維夫（Rivne）擔任程式設計師，並在文章指出才剛使用這台手機僅三週，沒想到手機成為自己的保命工具。</p>
+    <p>他說，某日在戰場上遭遇敵軍猛烈砲火，一枚大型彈片正面擊中他攜帶的手機。彈片雖擊碎螢幕，但被卡在堅固的鈦金屬機殼內，未能穿透至士兵身體。士兵形容，手機就像盔甲，成為他與傷口之間唯一的防護。</p>
+
+    </span>
 
 </body>
 
