--- a/HW0610.html
+++ b/HW0610.html
@@ -20,9 +20,12 @@
         }
 
         div {
+            width: 1100px;
+            margin: 0 auto;
+            padding: 20px;
             border: 3px solid grey;
-            margin-left: 750px;
-            margin-right: 750px;
+            /* margin-left: 750px;
+            margin-right: 750px; */
         }
 
         .img {
@@ -31,9 +34,12 @@
         }
 
         .center {
-            text-align: center;
-            margin-left: 135px;
-            margin-right: 135px;
+            text-align: justify;
+            max-width: 200;
+            margin: 0 auto;
+            padding-left: 135px;
+            padding-right: 135px;
+
         }
 
         .besidepicture {
@@ -45,10 +51,13 @@
 <body>
     <div>
         <h2>蘋果WWDC登場！IOS26操作介面玻璃全新設計</h2>
-        <img class="img" src="Image/apple.webp" alt="蘋果新的設計欸!" width="550">
+        <figure>
+            <img class="img" src="Image/apple.webp" alt="蘋果新的設計欸!" width="550">
+            <figcaption class="img" style="font-size: 16px;">▲蘋果WWDC25 6月10日凌晨1點揭開序幕。（圖／取自Youtube直播）</figcaption>
+        </figure>
         <p class="besidepicture">[NOWnews今日新聞] 蘋果WWDC2025 10日凌晨1點正式登場，會上公布此次了IOS
             26全新介面設計，稱是「全面跨平台的設計」，整體介面呈現透明玻璃感，解鎖也是液態玻璃的形式，蘋果指出使用者之後滑手機「會讓人非常的賞心悅目」。</p>
-        <p class="center">蘋果指出，IOS
+        <p class="center" style="margin-top: 100px;">蘋果指出，IOS
             26介面當用戶手機划上、滑下時將會縮小APP，設計層次都有玻璃感風格，是全新的設計，也是跨平台的全面設計，用戶依然對介面很熟悉，但仍稍微有做改變，用戶無論是使用深色或透明介面，都是玻璃的形式。</p>
         <p class="center">而手機解鎖也全數改為液態玻璃的風格頁面，此外，播放音樂時將是介面動態的形式，鎖定畫面及主畫面也將變得更加個人化。</p>
         <p class="center">Car play方面，也全數改成透明感的介面設計，用戶的即時動態訊息和動態島都會立即出現在Car play頁面上。</p>
