--- a/box-model.html
+++ b/box-model.html
@@ -21,10 +21,12 @@
 
         .image1 {
             float: left;
+            width: 400px;
         }
 
         .image2 {
             float: right;
+            width: 400px;
         }
 
         h1 {
