--- a/HW0610.html
+++ b/HW0610.html
@@ -15,31 +15,27 @@
             font-size: 30px;
         }
 
-        h2 {
-            text-align: center;
-        }
-
         div {
-            width: 1100px;
+            width: 45%;
             margin: 0 auto;
             padding: 20px;
             border: 3px solid grey;
+            line-height: 1.7;
+            text-indent: 64px;
             /* margin-left: 750px;
             margin-right: 750px; */
         }
 
         .img {
+            width: 50%;
             float: left;
             margin: 20px;
         }
 
         .center {
             text-align: justify;
-            max-width: 200;
+            max-width: 70%;
             margin: 0 auto;
-            padding-left: 135px;
-            padding-right: 135px;
-
         }
 
         .besidepicture {
