--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <a class="hrefsize" href="box-model.html">box-model</a>
     <a class="hrefsize" href="table.html">Table</a>
     <a class="hrefsize" href="HW0610.html">Homework</a>
+    <a class="hrefsize" href="form.html">form</a>
     <a class="hrefsize" href="CSSstyle.html">CSSstyle</a><br>
     <figure>
         <a href="https://ww.kuro.wiki/codex/roles/detail?lang=zh-Hant&id=1107"><img src="Image/girl.webp" alt="柯萊塔"
