--- a/form.html
+++ b/form.html
@@ -19,14 +19,14 @@
         }
 
         .str2 {
-            width: 20%;
+            width: 40%;
             margin: 10px auto;
             padding: 5px;
             text-align: center;
         }
 
         .t1 {
-            border: 1px solid red;
+            /* border: 1px solid red; */
             width: 150px;
             float: left;
             text-align: center;
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-    <form action="#" method="post" enctype="">
+    <form action="#" method="get" enctype="">
         <fieldset>
             <legend>個人檔案一</legend>
             <div class="str1">
@@ -60,8 +60,12 @@
                 <input type="password" id="pwd" name="pwd" maxlength="6">
             </div>
             <div class="str1">
+                <label for="" class="t1">身分證:</label>
+                <input type="text" name="IDcode" maxlength="10" pattern="[a-z,A-Z]{1}[1-2,8-9]{1}\d{8}" required>
+            </div>
+            <div class="str1">
                 <label class="t1">性別:</label>
-                <label><input class="selectboxstyle" type="radio" name="gender" value="male">男
+                <label><input class="selectboxstyle" type="radio" name="gender" value="male" required>男
                 </label>
                 <label><input class="selectboxstyle" type="radio" name="gender" value="female">女</label>
             </div>
@@ -98,7 +102,7 @@
             <legend>個人檔案二</legend>
             <div class="str1">
                 <label class="t1" for="suggest">意見:</label>
-                <textarea style="size:20px;" cols="40" rows="5" name="suggest" id="suggest"></textarea>
+                <textarea style="width: 70%;" cols="40" rows="5" name="suggest" id="suggest"></textarea>
             </div>
             <div class="str2">
                 <input type="submit" value="送出">
