--- a/form_example.html
+++ b/form_example.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,21 +8,22 @@
     <title>Input Type</title>
     <style>
         .t1 {
-            width:100px;
-            float:left;
-            text-align:right;
+            width: 100px;
+            float: left;
+            text-align: right;
         }
     </style>
 </head>
+
 <body>
     <form action="#" method="get">
-        <p>  
+        <p>
             <label class="t1" for="">date:</label>
-            <input type="date" name="date1">   
+            <input type="date" name="date1">
         </p>
-        <p>   
+        <p>
             <label for="" class="t1">datetime:</label>
-            <input type="datetime-local" name="dt1">     
+            <input type="datetime-local" name="dt1">
         </p>
         <p>
             <label for="" class="t1">month:</label>
@@ -39,7 +41,20 @@
             <label class="t1">URL:</label>
             <input type="url" name="url1">
         </p>
+        <p>
+            <label for="" class="t1">數字:</label>
+            <input type="number" name="NUM">
+        </p>
+        <p>
+            <label for="" class="t1">範圍:</label>
+            <input type="range" name="RG1">
+        </p>
+        <p>
+            <label for="" class="t1">身分證:</label>
+            <input type="text" name="IDcode" pattern="[a-z,A-Z]{1}[1-2,8-9]{1}\d{8}">
+        </p>
         <input type="submit" value="送出">
     </form>
 </body>
+
 </html>
