--- a/CSSstyle_1.html
+++ b/CSSstyle_1.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSSstyle_1</title>
     <link rel="stylesheet" href="style/style1.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="style/font.css">
+    <link href="https://fonts.googleapis.com/css2?family=Matemasie&family=Pacifico&display=swap" rel="stylesheet">
     <style>
 
     </style>
@@ -17,9 +20,9 @@
     <a href="index.html">首頁</a>
     <h1 class="str1" id="thestyelh1">Apple</h1>
     <h2 class="str1">Banana</h2>
-    <h2 class="str2">Watertmelon</h2>
-    <h3 class="str2">Orange</h3>
-    <h2 class="color1 color2">AppleMilk</h2>
+    <h2 class="str2 font2">Watertmelon</h2>
+    <h3 class="font1">Orange</h3>
+    <h2 class="color1 color2 cute">AppleMilk</h2>
     <h2 class="color2 color1 cool">GreenTee</h2>
 </body>
 
