--- a/iframe_section.html
+++ b/iframe_section.html
@@ -49,7 +49,12 @@
     <section id="code">
         <h3>原始碼輸出</h3>
         <!-- 請使用特殊字元修改以下原始碼 -->
-        <!-- <iframe src="https://www.ispan.com.tw" width="800" height="600"></iframe> -->
+        &lt;iframe src="https://www.ispan.com.tw" width="800" height="600"></iframe>
+        <figure>
+            <code>
+                &lt;iframe src="https://www.ispan.com.tw" width="800" height="600">&lt;/iframe>
+            </code>
+        </figure>
         <hr>
     </section>
 
