--- a/CSSstyle_1.html
+++ b/CSSstyle_1.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSSstyle_1</title>
-    <link rel="stylesheet" href="style/style1.css">
+    <link rel="stylesheet" href="style/link.css">
+    <!-- <link rel="stylesheet" href="style/style1.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="style/font.css">
-    <link href="https://fonts.googleapis.com/css2?family=Matemasie&family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Matemasie&family=Pacifico&display=swap" rel="stylesheet"> -->
     <style>
 
     </style>
