--- a/module17.html
+++ b/module17.html
@@ -22,11 +22,15 @@
         .list li a {
             display: block;
             text-align: center;
+            line-height: 2.5em;
         }
 
         .list li a:hover {
             background-color: #fff;
+        }
 
+        .list li a link {
+            text-align: center;
         }
 
         .st3 {
