--- a/RWD.html
+++ b/RWD.html
@@ -16,7 +16,7 @@
 <body>
     <main id="allpage">
         <header>
-            <img class="logo-img" src="Image/logo.png" title="logo" alt="logo">
+            <img class="logo-img" src="Image/JohnCena.gif" title="logo" alt="logo">
             <nav>
                 <ul class="menu">
                     <li><a href="">首頁</a></li>
