--- a/column.html
+++ b/column.html
@@ -9,10 +9,11 @@
         * {
             padding: 0;
             margin: 0;
+
         }
 
         body {
-            background-image: url(Image/firefly.jfif);
+            background-image: url(Image/黃泉.jpg);
             background-repeat: no-repeat;
             background-size: 100% 100%;
             background-attachment: fixed;
@@ -49,6 +50,8 @@
 
         .cl2 p {
             text-align: justify;
+            background-image: url(Image/JohnCena.gif);
+            background-size: 100% 100%;
         }
 
         .cl3 {
@@ -60,6 +63,7 @@
             margin: 30px auto;
             background-size: cover;
             background-position: center center;
+
         }
 
         .cl4 {
